# HI

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PRD.md  PRD_MVP.md  Prototype.md  README.md  TechDesign.md  docker-compose.yml
.github/workflows/: ci.yml
config/: agent.yml  beat.yml  llm.openai.example.yml
crates/hi_telos/: Cargo.toml
crates/hi_telos/src/: lib.rs  main.rs  state.rs
crates/hi_telos/src/agent/: mod.rs
crates/hi_telos/src/config/: mod.rs
crates/hi_telos/src/fixtures/: mod.rs
crates/hi_telos/src/llm/: mod.rs
crates/hi_telos/src/orchestrator/: mod.rs
crates/hi_telos/src/server/: acceptance.rs  mod.rs  ui.rs
crates/hi_telos/src/storage/: memory.rs  mod.rs  structured_text.rs
crates/hi_telos/src/tasks/: mod.rs
crates/hi_telos/tests/: e2e.rs
crates/hi_telos/tests/common/: mod.rs
crates/hi_telos/tests/fixtures/core/config/: beat.yml  llm.yml
crates/hi_telos/tests/fixtures/core/data/intent/inbox/: 20240101T000000-00000000-0000-0000-0000-000000000001.md
crates/hi_telos/tests/fixtures/core/data/mock/: text_structure.json
crates/hi_telos/tests/fixtures/core/data/mock/text_structure_history/: 20240101T000000000000Z.json
docs/: work_acceptance_plan.md
hi_telos/src/: lib.rs
hi_telos/src/agent/: mod.rs
hi_telos/src/llm/: mod.rs
hi_telos/src/server/: mod.rs
hi_telos/src/storage/: mod.rs
hi_telos/tests/: e2e.rs
