[package]
name = "hi_telos"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
walkdir = "2"
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
pulldown-cmark = "0.9"

[features]
default = []

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
